--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ repositories {
 }
 
 dependencies {
-    compile 'net.openhft:chronicle-bytes:2.17.18'
-    compile 'net.openhft:chronicle-threads:2.17.2'
+    compile project(':chronicle-bytes')
+    compile project(':chronicle-threads')
     compile 'net.openhft:compiler:2.3.4'
     testCompile 'junit:junit:4.12'
     testCompile 'org.slf4j:slf4j-simple:1.7.25'
