workaround for default utf-16 strings on openj9

--- a/build.gradle
+++ b/build.gradle
@@ -59,3 +59,10 @@ publishing {
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+test {
+    def javaVendor = System.properties['java.vendor']
+    if (javaVendor.toLowerCase().contains('openj9')) {
+        jvmArgs '-XX:+CompactStrings' // required for StringUtils on OpenJ9
+    }
+}
